# StatsBot_MKWorld

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: COMMANDS.md
src/: main.py
src/API/: get_mkworld.py
src/cogs/: staff.py  stats.py
src/common/: calculation.py  checks.py  constants.py  data_handler.py  lounge_style.mplstyle  plotting.py  predict.py
